2022-04-25  Luigi Scarso <luigi.scarso@gmail.com>
    * kpse find_file and lookup also search in --output-directory

2022-04-21  Luigi Scarso <luigi.scarso@gmail.com>
    * Wrong array size extended node_fields_whatsit_pdf_action (HH)

2022-04-18 Luigi Scarso <luigi.scarso@gmail.com>
    * Fix for Bug: Null-byte in csname not handled correctly (thanks to H. Menke)

2022-04-13 Luigi Scarso <luigi.scarso@gmail.com>
    * Make require return an error for ffi without shell-escape (H. Menke)

2022-04-12  Luigi Scarso <luigi.scarso@gmail.com>
    * Fix for 'Bug: attempt to double-free kern node'; 
      restore safeguard math (HH). Thanks to H. Menke

2022-03-21  Karl Berry  <karl@tug.org>

	* TL'22 release.

2022-03-10 Luigi Scarso <luigi.scarso@gmail.com>
    *  -[no-]parse-first-line is now an unrecognized option (thanks to K.Berry)

2022-02-28 Luigi Scarso <luigi.scarso@gmail.com>
    * pass node to latelua function call (H.Hagen)

2022-02-27 Luigi Scarso <luigi.scarso@gmail.com>
    * Development id also with --version.

2022-02-26 Luigi Scarso <luigi.scarso@gmail.com>
    * write xformattributes and xformresources  (thanks to E. Renkema)

2022-02-25 Luigi Scarso <luigi.scarso@gmail.com>
    * lower max to 10000 and reverse check to max check exception penalty (H.Hagen)

2022-02-05 Luigi Scarso <luigi.scarso@gmail.com>
    *  intercept prefix for toksapp cum suis (H.Hagen)

2022-01-23 Luigi Scarso <luigi.scarso@gmail.com>
    * fixing a 15 year old buglet (math atom glue leak).  
    * New primitive \matheqdirmode for short skip detection in  r2l typesetting (H. Hagen)

2022-01-21 Luigi Scarso <luigi.scarso@gmail.com>
    * patch for the logging of \scantextokens (H. Hagen)

2022-01-17 Siep Kroonenberg <siepo@bitmuis.nl>
   * patch for inconsistent definitions inet_ntop/inet_pton

2022-01-12 Luigi Scarso <luigi.scarso@gmail.com>
   * fixed \showstream (M.Krüger)

2021-12-31 Luigi Scarso <luigi.scarso@gmail.com>
    * drop (for the moment) \showstream
